--- a/hi/templates/5.DASHBOARD.html
+++ b/hi/templates/5.DASHBOARD.html
@@ -242,14 +242,15 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-database.js"></script>
     <script>
         // Your web app's Firebase configuration
-        var firebaseConfig = {
-            apiKey: "AIzaSyDhqwM0fuSacUUedhspxsZdhToh3sA3J2o",
-            authDomain: "iam-dashborad.firebaseapp.com",
-            databaseURL: "https://iam-dashborad-default-rtdb.asia-southeast1.firebasedatabase.app",
+        // Firebase configuration
+        const firebaseConfig = {
+            apiKey://yours,
+            authDomain: //yours,
+            databaseURL: //yours,
             projectId: "iam-dashborad",
             storageBucket: "iam-dashborad.appspot.com",
-            messagingSenderId: "162560536071",
-            appId: "1:162560536071:web:3d253c875151b7bd3b04a2"
+            messagingSenderId://yours,
+            appId://yours,
         };
 
         // Initialize Firebase
