--- a/hi/templates/7.user.html
+++ b/hi/templates/7.user.html
@@ -244,15 +244,16 @@
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js";
     import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js";
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyDhqwM0fuSacUUedhspxsZdhToh3sA3J2o",
-      authDomain: "iam-dashborad.firebaseapp.com",
-      databaseURL: "https://iam-dashborad-default-rtdb.asia-southeast1.firebasedatabase.app",
-      projectId: "iam-dashborad",
-      storageBucket: "iam-dashborad.appspot.com",
-      messagingSenderId: "162560536071",
-      appId: "1:162560536071:web:3d253c875151b7bd3b04a2"
-    };
+        // Firebase configuration
+        const firebaseConfig = {
+            apiKey://yours,
+            authDomain: //yours,
+            databaseURL: //yours,
+            projectId: "iam-dashborad",
+            storageBucket: "iam-dashborad.appspot.com",
+            messagingSenderId://yours,
+            appId://yours,
+        };
 
     const app = initializeApp(firebaseConfig);
     const database = getDatabase(app);
