--- a/hi/templates/LOGIN.html
+++ b/hi/templates/LOGIN.html
@@ -205,14 +205,15 @@
         import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-auth.js";
         
         // Firebase configuration
+        // Firebase configuration
         const firebaseConfig = {
-            apiKey: "AIzaSyDhqwM0fuSacUUedhspxsZdhToh3sA3J2o",
-            authDomain: "iam-dashborad.firebaseapp.com",
-            databaseURL: "https://iam-dashborad-default-rtdb.asia-southeast1.firebasedatabase.app",
+            apiKey://yours,
+            authDomain: //yours,
+            databaseURL: //yours,
             projectId: "iam-dashborad",
             storageBucket: "iam-dashborad.appspot.com",
-            messagingSenderId: "162560536071",
-            appId: "1:162560536071:web:3d253c875151b7bd3b04a2"
+            messagingSenderId://yours,
+            appId://yours,
         };
 
         // Initialize Firebase
